refactoring + chart overflow fix

--- a/src/app/reports/charts/careerlevelfraudtrend/careerlevelfraudtrend.component.css
+++ b/src/app/reports/charts/careerlevelfraudtrend/careerlevelfraudtrend.component.css
@@ -1,14 +1,12 @@
 @import '@angular/material/prebuilt-themes/indigo-pink.css';
 
-mat-card {
-  /*padding: 15%;*/
+/*mat-card {
   margin: 5%;
-  /*border:dotted;*/
-  height: 500px;
+
   background-color:white;
   display:flex;
   flex-direction:column;
-}
+}*/
 
 
 mat-card-content{
